--- a/public/css/app.css
+++ b/public/css/app.css
@@ -781,6 +781,10 @@ select {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
 }
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -788,10 +792,6 @@ select {
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-}
-.my-6 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
@@ -883,14 +883,14 @@ select {
 .mt-\[5vh\] {
   margin-top: 5vh;
 }
-.mt-\[4vh\] {
-  margin-top: 4vh;
-}
 .mt-\[10vh\] {
   margin-top: 10vh;
 }
 .mb-10 {
   margin-bottom: 2.5rem;
+}
+.mt-\[4vh\] {
+  margin-top: 4vh;
 }
 .block {
   display: block;
@@ -970,19 +970,13 @@ select {
 .h-\[300px\] {
   height: 300px;
 }
-.h-20 {
-  height: 5rem;
-}
 .h-fit {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
 }
-.h-\[2\] {
-  height: 2;
-}
-.h-\[10px\] {
-  height: 10px;
+.h-20 {
+  height: 5rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1023,13 +1017,13 @@ select {
 .w-4\/5 {
   width: 80%;
 }
+.w-8 {
+  width: 2rem;
+}
 .w-fit {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-}
-.w-8 {
-  width: 2rem;
 }
 .w-auto {
   width: auto;
@@ -1064,6 +1058,9 @@ select {
 .w-10 {
   width: 2.5rem;
 }
+.w-80 {
+  width: 20rem;
+}
 .w-\[180px\] {
   width: 180px;
 }
@@ -1072,12 +1069,6 @@ select {
 }
 .w-20 {
   width: 5rem;
-}
-.w-\[5\] {
-  width: 5;
-}
-.w-80 {
-  width: 20rem;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1339,21 +1330,13 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
-.border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
-.border-red-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(252 165 165 / var(--tw-border-opacity));
-}
 .border-red-200 {
   --tw-border-opacity: 1;
   border-color: rgb(254 202 202 / var(--tw-border-opacity));
 }
-.border-red-400 {
+.border-gray-100 {
   --tw-border-opacity: 1;
-  border-color: rgb(248 113 113 / var(--tw-border-opacity));
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -1493,6 +1476,10 @@ select {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
 .pr-4 {
   padding-right: 1rem;
 }
@@ -1523,6 +1510,9 @@ select {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
+.pt-6 {
+  padding-top: 1.5rem;
+}
 .pr-3 {
   padding-right: 0.75rem;
 }
@@ -1531,9 +1521,6 @@ select {
 }
 .pt-0 {
   padding-top: 0px;
-}
-.pt-6 {
-  padding-top: 1.5rem;
 }
 .pb-4 {
   padding-bottom: 1rem;
